fix(Button Icons): Alignment is slightly off (#1323)

--- a/src/assets/wise5/authoringTool/importComponent/choose-import-component-location/choose-import-component-location.component.scss
+++ b/src/assets/wise5/authoringTool/importComponent/choose-import-component-location/choose-import-component-location.component.scss
@@ -19,3 +19,7 @@
   margin-top: 10px;
   margin-left: 30px;
 }
+
+.mat-icon {
+  margin: 0px;
+}
